# CPP_Neural_Scratch

./: .gitignore  CMakeLists.txt  LICENSE
include/: Activation.h  Layer.h  Matrix.h
src/: Layer.cpp  Matrix.cpp
tests/: CMakeLists.txt  test_activations.cpp  test_matrix.cpp
